fix: cropped borders on mobile with Cards layout

--- a/src/modules/Workspace/Layouts/cards.scss
+++ b/src/modules/Workspace/Layouts/cards.scss
@@ -86,8 +86,6 @@ body.anp-card-layout {
 	}
 	.mod-vertical {
 		.workspace-tabs {
-			padding-left: var(--anp-card-layout-padding, 10px);
-			padding-right: var(--anp-card-layout-padding, 10px);
 			.workspace-tab-header-container {
 				padding-left: var(--anp-card-header-left-padding, 20px);
 				.workspace-tab-header-container-inner {
@@ -97,6 +95,17 @@ body.anp-card-layout {
 			}
 		}
 	}
+
+    @media screen and (min-width: 600px) {
+	    .mod-vertical {
+            .workspace-tabs {
+                padding-left: var(--anp-card-layout-padding, 10px);
+                padding-right: var(--anp-card-layout-padding, 10px);
+            }
+        }
+    }
+
+
 	.mod-left-split,
 	.mod-right-split {
 		.workspace-tab-container {
@@ -105,14 +114,23 @@ body.anp-card-layout {
 			background-color: var(--tab-container-background);
 		}
 	}
-	.workspace-split .workspace-leaf-content:not([data-type="file-explorer"]),
-	&.anp-card-layout-filebrowser
-		.workspace-leaf-content[data-type="file-explorer"] {
-		border-radius: var(--anp-card-radius, var(--radius-xl));
-		background-color: var(--card-foreground-color);
-		border: 1px solid var(--tab-outline-color);
-		margin-bottom: var(--anp-card-layout-padding, 10px);
-	}
+
+    .workspace-split .workspace-leaf-content:not([data-type="file-explorer"]),
+	    &.anp-card-layout-filebrowser
+	    	.workspace-leaf-content[data-type="file-explorer"] {
+	    	background-color: var(--card-foreground-color);
+	    	border: 1px solid var(--tab-outline-color);
+	    }
+
+    @media screen and (min-width: 600px) {
+	    .workspace-split .workspace-leaf-content:not([data-type="file-explorer"]),
+	    &.anp-card-layout-filebrowser
+	    	.workspace-leaf-content[data-type="file-explorer"] {
+	    	border-radius: var(--anp-card-radius, var(--radius-xl));
+	    	margin-bottom: var(--anp-card-layout-padding, 10px);
+	    }
+    }
+
 	&.anp-card-shadows {
 		.workspace-split .workspace-leaf-content,
 		&.anp-card-layout-actions .side-dock-actions,
